--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Test-NaiveStubs
 
 {{$NEXT}}
     - Simplified the expected new unit test text.
+    - Improved documentation.
 
 0.0700 2019-01-01 15:51:08
     - Added an is_oo attribute to prevent re-grep in unit_test().
