--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Test-NaiveStubs
 
 {{$NEXT}}
+    - Avoid implicit imports.
 
 0.0702 2019-01-02 12:40:52
     - Enhanced eg/stub.
